@@ -1,5 +1,9 @@
 2008-12-30  Scott Ellington  <scott.ellington@gmail.com>
 
+	* Xml/Serialization/MapSerializer.cs: don't write empty options
+
+2008-12-30  Scott Ellington  <scott.ellington@gmail.com>
+
 	* Layer.cs: make method public
 
 2008-12-19  Full Name  <Email Address>
